Example of CEC modules notebook

--- a/Pronostico de potencia.ipynb
+++ b/Pronostico de potencia.ipynb
@@ -157,9 +157,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2020-11-26 06:00:00-06:00</th>\n",
-       "      <td>14.149994</td>\n",
-       "      <td>1.148972</td>\n",
+       "      <th>2020-11-30 06:00:00-06:00</th>\n",
+       "      <td>14.009766</td>\n",
+       "      <td>1.665378</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -169,52 +169,52 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-11-26 09:00:00-06:00</th>\n",
-       "      <td>12.845245</td>\n",
-       "      <td>0.427756</td>\n",
-       "      <td>325.053195</td>\n",
-       "      <td>642.323957</td>\n",
-       "      <td>85.142313</td>\n",
+       "      <th>2020-11-30 09:00:00-06:00</th>\n",
+       "      <td>12.518585</td>\n",
+       "      <td>0.949637</td>\n",
+       "      <td>314.644421</td>\n",
+       "      <td>637.614692</td>\n",
+       "      <td>83.204002</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-11-26 12:00:00-06:00</th>\n",
-       "      <td>12.427887</td>\n",
-       "      <td>1.444086</td>\n",
-       "      <td>653.846474</td>\n",
-       "      <td>524.910637</td>\n",
-       "      <td>268.914159</td>\n",
-       "      <td>20.0</td>\n",
+       "      <th>2020-11-30 12:00:00-06:00</th>\n",
+       "      <td>11.747162</td>\n",
+       "      <td>1.164620</td>\n",
+       "      <td>743.593202</td>\n",
+       "      <td>825.294279</td>\n",
+       "      <td>145.631945</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-11-26 15:00:00-06:00</th>\n",
-       "      <td>22.250427</td>\n",
-       "      <td>0.927074</td>\n",
-       "      <td>519.269418</td>\n",
-       "      <td>563.361710</td>\n",
-       "      <td>187.110158</td>\n",
-       "      <td>16.0</td>\n",
+       "      <th>2020-11-30 15:00:00-06:00</th>\n",
+       "      <td>21.534973</td>\n",
+       "      <td>1.058380</td>\n",
+       "      <td>573.169109</td>\n",
+       "      <td>786.520298</td>\n",
+       "      <td>112.682737</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>16.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2020-11-26 18:00:00-06:00</th>\n",
-       "      <td>38.149994</td>\n",
-       "      <td>0.629852</td>\n",
-       "      <td>2.777806</td>\n",
+       "      <th>2020-11-30 18:00:00-06:00</th>\n",
+       "      <td>35.050018</td>\n",
+       "      <td>1.012902</td>\n",
+       "      <td>2.924523</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>2.777806</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>2.924523</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>8.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -222,25 +222,25 @@
       ],
       "text/plain": [
        "                            temp_air  wind_speed         ghi         dni  \\\n",
-       "2020-11-26 06:00:00-06:00  14.149994    1.148972    0.000000    0.000000   \n",
-       "2020-11-26 09:00:00-06:00  12.845245    0.427756  325.053195  642.323957   \n",
-       "2020-11-26 12:00:00-06:00  12.427887    1.444086  653.846474  524.910637   \n",
-       "2020-11-26 15:00:00-06:00  22.250427    0.927074  519.269418  563.361710   \n",
-       "2020-11-26 18:00:00-06:00  38.149994    0.629852    2.777806    0.000000   \n",
+       "2020-11-30 06:00:00-06:00  14.009766    1.665378    0.000000    0.000000   \n",
+       "2020-11-30 09:00:00-06:00  12.518585    0.949637  314.644421  637.614692   \n",
+       "2020-11-30 12:00:00-06:00  11.747162    1.164620  743.593202  825.294279   \n",
+       "2020-11-30 15:00:00-06:00  21.534973    1.058380  573.169109  786.520298   \n",
+       "2020-11-30 18:00:00-06:00  35.050018    1.012902    2.924523    0.000000   \n",
        "\n",
        "                                  dhi  total_clouds  low_clouds  mid_clouds  \\\n",
-       "2020-11-26 06:00:00-06:00    0.000000           0.0         0.0         0.0   \n",
-       "2020-11-26 09:00:00-06:00   85.142313           0.0         0.0         0.0   \n",
-       "2020-11-26 12:00:00-06:00  268.914159          20.0         0.0         0.0   \n",
-       "2020-11-26 15:00:00-06:00  187.110158          16.0         0.0         0.0   \n",
-       "2020-11-26 18:00:00-06:00    2.777806           8.0         0.0         0.0   \n",
+       "2020-11-30 06:00:00-06:00    0.000000           0.0         0.0         0.0   \n",
+       "2020-11-30 09:00:00-06:00   83.204002           0.0         0.0         0.0   \n",
+       "2020-11-30 12:00:00-06:00  145.631945           0.0         0.0         0.0   \n",
+       "2020-11-30 15:00:00-06:00  112.682737           1.0         1.0         0.0   \n",
+       "2020-11-30 18:00:00-06:00    2.924523          12.0        12.0         0.0   \n",
        "\n",
        "                           high_clouds  \n",
-       "2020-11-26 06:00:00-06:00          0.0  \n",
-       "2020-11-26 09:00:00-06:00          0.0  \n",
-       "2020-11-26 12:00:00-06:00         20.0  \n",
-       "2020-11-26 15:00:00-06:00         16.0  \n",
-       "2020-11-26 18:00:00-06:00          8.0  "
+       "2020-11-30 06:00:00-06:00          0.0  \n",
+       "2020-11-30 09:00:00-06:00          0.0  \n",
+       "2020-11-30 12:00:00-06:00          0.0  \n",
+       "2020-11-30 15:00:00-06:00          0.0  \n",
+       "2020-11-30 18:00:00-06:00          0.0  "
       ]
      },
      "execution_count": 7,
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_air = data.Temperature.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -472,85 +481,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2020-11-26 06:00:00-06:00      0.000000\n",
-       "2020-11-26 09:00:00-06:00    476.090729\n",
-       "2020-11-26 12:00:00-06:00    804.487118\n",
-       "2020-11-26 15:00:00-06:00    671.704074\n",
-       "2020-11-26 18:00:00-06:00      2.628944\n",
-       "2020-11-26 21:00:00-06:00      0.000000\n",
-       "2020-11-27 00:00:00-06:00      0.000000\n",
-       "2020-11-27 03:00:00-06:00      0.000000\n",
-       "2020-11-27 06:00:00-06:00      0.000000\n",
-       "2020-11-27 09:00:00-06:00    232.778165\n",
-       "2020-11-27 12:00:00-06:00    720.713382\n",
-       "2020-11-27 15:00:00-06:00    397.369338\n",
-       "2020-11-27 18:00:00-06:00      2.276272\n",
-       "2020-11-27 21:00:00-06:00      0.000000\n",
-       "2020-11-28 00:00:00-06:00      0.000000\n",
-       "2020-11-28 03:00:00-06:00      0.000000\n",
-       "2020-11-28 06:00:00-06:00      0.000000\n",
-       "2020-11-28 09:00:00-06:00    206.624874\n",
-       "2020-11-28 12:00:00-06:00    575.359684\n",
-       "2020-11-28 15:00:00-06:00    785.227884\n",
-       "2020-11-28 18:00:00-06:00      2.834867\n",
-       "2020-11-28 21:00:00-06:00      0.000000\n",
-       "2020-11-29 00:00:00-06:00      0.000000\n",
-       "2020-11-29 03:00:00-06:00      0.000000\n",
-       "2020-11-29 06:00:00-06:00      0.000000\n",
-       "2020-11-29 09:00:00-06:00    470.292075\n",
-       "2020-11-29 12:00:00-06:00    973.257524\n",
-       "2020-11-29 15:00:00-06:00    529.197200\n",
-       "2020-11-29 18:00:00-06:00      2.577332\n",
-       "2020-11-29 21:00:00-06:00      0.000000\n",
-       "2020-11-30 00:00:00-06:00      0.000000\n",
-       "2020-11-30 03:00:00-06:00      0.000000\n",
-       "2020-11-30 06:00:00-06:00      0.000000\n",
-       "2020-11-30 09:00:00-06:00    468.317002\n",
-       "2020-11-30 12:00:00-06:00    972.802181\n",
-       "2020-11-30 15:00:00-06:00    780.461519\n",
-       "2020-11-30 18:00:00-06:00      2.962925\n",
-       "2020-11-30 21:00:00-06:00      0.000000\n",
-       "2020-12-01 00:00:00-06:00      0.000000\n",
-       "2020-12-01 03:00:00-06:00      0.000000\n",
-       "2020-12-01 06:00:00-06:00      0.000000\n",
-       "2020-12-01 09:00:00-06:00    230.748367\n",
-       "2020-12-01 12:00:00-06:00    588.542374\n",
-       "2020-12-01 15:00:00-06:00    690.407542\n",
-       "2020-12-01 18:00:00-06:00      2.619434\n",
-       "2020-12-01 21:00:00-06:00      0.000000\n",
-       "2020-12-02 00:00:00-06:00      0.000000\n",
-       "2020-12-02 03:00:00-06:00      0.000000\n",
-       "2020-12-02 06:00:00-06:00      0.000000\n",
-       "2020-12-02 09:00:00-06:00    321.684498\n",
-       "2020-12-02 12:00:00-06:00    743.429486\n",
-       "2020-12-02 15:00:00-06:00    375.103062\n",
-       "2020-12-02 18:00:00-06:00      2.554021\n",
-       "2020-12-02 21:00:00-06:00      0.000000\n",
-       "2020-12-03 00:00:00-06:00      0.000000\n",
-       "2020-12-03 03:00:00-06:00           NaN\n",
-       "2020-12-03 06:00:00-06:00           NaN\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "effective_irradiance = poa_direct * iam + poa_diffuse\n",
-    "effective_irradiance"
+    "#effective_irradiance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_cell = pvlib.temperature.pvsyst_cell(poa_global, temp_air)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cecparams = pvlib.pvsystem.calcparams_cec(\n",
+    "        effective_irradiance, temp_cell,\n",
+    "        CECMOD_MONO.alpha_sc, CECMOD_MONO.a_ref,\n",
+    "        CECMOD_MONO.I_L_ref, CECMOD_MONO.I_o_ref,\n",
+    "        CECMOD_MONO.R_sh_ref, CECMOD_MONO.R_s, CECMOD_MONO.Adjust)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +533,7 @@
       "\u001b[0;31mKeyError\u001b[0m: 'Bvmpo'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-cd29f79ac8e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msapm_out\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpvsystem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msapm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meffective_irradiance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpvtemp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcec_module\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(sapm_out.head())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0msapm_out\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p_mp'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DC Power (W)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-27-cd29f79ac8e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msapm_out\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpvsystem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msapm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meffective_irradiance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpvtemp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcec_module\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#print(sapm_out.head())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0msapm_out\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p_mp'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DC Power (W)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Desktop/Tesis Pvlib/env_pvlib_tesis/lib/python3.8/site-packages/pvlib/pvsystem.py\u001b[0m in \u001b[0;36msapm\u001b[0;34m(effective_irradiance, temp_cell, module)\u001b[0m\n\u001b[1;32m   1594\u001b[0m     \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mequal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhere\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnotnan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mEe_eq_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1595\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1596\u001b[0;31m     \u001b[0mBvmpo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Bvmpo'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Mbvmp'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mEe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1597\u001b[0m     \u001b[0mBvoco\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Bvoco'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Mbvoc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mEe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1598\u001b[0m     \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'N'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mkb\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtemp_cell\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m273.15\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Desktop/Tesis Pvlib/env_pvlib_tesis/lib/python3.8/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    880\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    881\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mkey_is_scalar\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 882\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    883\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    884\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_hashable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/Desktop/Tesis Pvlib/env_pvlib_tesis/lib/python3.8/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m_get_value\u001b[0;34m(self, label, takeable)\u001b[0m\n\u001b[1;32m    987\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    988\u001b[0m         \u001b[0;31m# Similar to Index.get_value, but we do not fall back to positional\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 989\u001b[0;31m         \u001b[0mloc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    990\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_values_for_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    991\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
