--- a/Using CEC modules example.ipynb
+++ b/Using CEC modules example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "header, data = pvlib.iotools.get_psm3(LATITUDE, LONGITUDE, NREL_API_KEY, EMAIL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Source': 'NSRDB',\n",
+       " 'Location ID': '155474',\n",
+       " 'City': '-',\n",
+       " 'State': '-',\n",
+       " 'Country': '-',\n",
+       " 'Latitude': 40.53,\n",
+       " 'Longitude': -108.54,\n",
+       " 'Time Zone': -7,\n",
+       " 'Elevation': 2133,\n",
+       " 'Local Time Zone': -7,\n",
+       " 'Dew Point Units': 'c',\n",
+       " 'DHI Units': 'w/m2',\n",
+       " 'DNI Units': 'w/m2',\n",
+       " 'GHI Units': 'w/m2',\n",
+       " 'Temperature Units': 'c',\n",
+       " 'Pressure Units': 'mbar',\n",
+       " 'Wind Direction Units': 'Degrees',\n",
+       " 'Wind Speed': 'm/s',\n",
+       " 'Surface Albedo Units': 'N/A',\n",
+       " 'Version': '3.1.1'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Minute</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Dew Point</th>\n",
+       "      <th>DHI</th>\n",
+       "      <th>DNI</th>\n",
+       "      <th>GHI</th>\n",
+       "      <th>Surface Albedo</th>\n",
+       "      <th>Pressure</th>\n",
+       "      <th>Wind Direction</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01 00:30:00-07:00</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>252.0</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01 01:30:00-07:00</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>255.0</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01 02:30:00-07:00</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>-26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>254.0</td>\n",
+       "      <td>1.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01 03:30:00-07:00</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>-26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>251.0</td>\n",
+       "      <td>1.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011-01-01 04:30:00-07:00</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>-26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>1.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-12-31 19:30:00-07:00</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>19</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-19.0</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>197.0</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-12-31 20:30:00-07:00</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>20</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>-24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>227.0</td>\n",
+       "      <td>1.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-12-31 21:30:00-07:00</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>21</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-21.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>1.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-12-31 22:30:00-07:00</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>22</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-22.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2005-12-31 23:30:00-07:00</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>23</td>\n",
+       "      <td>30</td>\n",
+       "      <td>-22.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8760 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           Year  Month  Day  Hour  Minute  Temperature  \\\n",
+       "2011-01-01 00:30:00-07:00  2011      1    1     0      30        -23.0   \n",
+       "2011-01-01 01:30:00-07:00  2011      1    1     1      30        -23.0   \n",
+       "2011-01-01 02:30:00-07:00  2011      1    1     2      30        -23.0   \n",
+       "2011-01-01 03:30:00-07:00  2011      1    1     3      30        -23.0   \n",
+       "2011-01-01 04:30:00-07:00  2011      1    1     4      30        -23.0   \n",
+       "...                         ...    ...  ...   ...     ...          ...   \n",
+       "2005-12-31 19:30:00-07:00  2005     12   31    19      30        -19.0   \n",
+       "2005-12-31 20:30:00-07:00  2005     12   31    20      30        -20.0   \n",
+       "2005-12-31 21:30:00-07:00  2005     12   31    21      30        -21.0   \n",
+       "2005-12-31 22:30:00-07:00  2005     12   31    22      30        -22.0   \n",
+       "2005-12-31 23:30:00-07:00  2005     12   31    23      30        -22.0   \n",
+       "\n",
+       "                           Dew Point  DHI  DNI  GHI  Surface Albedo  Pressure  \\\n",
+       "2011-01-01 00:30:00-07:00      -25.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2011-01-01 01:30:00-07:00      -25.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2011-01-01 02:30:00-07:00      -26.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2011-01-01 03:30:00-07:00      -26.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2011-01-01 04:30:00-07:00      -26.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "...                              ...  ...  ...  ...             ...       ...   \n",
+       "2005-12-31 19:30:00-07:00      -23.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2005-12-31 20:30:00-07:00      -24.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2005-12-31 21:30:00-07:00      -25.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2005-12-31 22:30:00-07:00      -25.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "2005-12-31 23:30:00-07:00      -25.0  0.0  0.0  0.0            0.87     780.0   \n",
+       "\n",
+       "                           Wind Direction  Wind Speed  \n",
+       "2011-01-01 00:30:00-07:00           252.0         1.4  \n",
+       "2011-01-01 01:30:00-07:00           255.0         1.4  \n",
+       "2011-01-01 02:30:00-07:00           254.0         1.3  \n",
+       "2011-01-01 03:30:00-07:00           251.0         1.3  \n",
+       "2011-01-01 04:30:00-07:00           249.0         1.2  \n",
+       "...                                   ...         ...  \n",
+       "2005-12-31 19:30:00-07:00           197.0         0.9  \n",
+       "2005-12-31 20:30:00-07:00           227.0         1.2  \n",
+       "2005-12-31 21:30:00-07:00           232.0         1.3  \n",
+       "2005-12-31 22:30:00-07:00           236.0         1.4  \n",
+       "2005-12-31 23:30:00-07:00           244.0         1.4  \n",
+       "\n",
+       "[8760 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
