--- a/ModelChain.ipynb
+++ b/ModelChain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "location = Location(latitude= 20.56, longitude= -103.22, altitude=1544, tz='America/Mexico_City')"
+    "latitude= 20.56\n",
+    "longitude= -103.22\n",
+    "altitude=1544\n",
+    "tz='America/Mexico_City'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location = Location(latitude=latitude, longitude=longitude, altitude=altitude, tz=tz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luisvargas/Desktop/Tesis Pvlib/env_pvlib_tesis/lib/python3.8/site-packages/pvlib/forecast.py:18: UserWarning: The forecast module algorithms and features are highly experimental. The API may change, the functionality may be consolidated into an io module, or the module may be separated into its own package.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from pvlib import solarposition, irradiance, atmosphere, pvsystem, inverter, temperature, iam\n",
     "from pvlib.forecast import GFS, NAM, NDFD, RAP, HRRR"
@@ -141,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Se obtiene la data y se procesa del modelo de pronostico\n",
-    "forecast_data = fm.get_processed_data(20.56, -103.22, start, end)"
+    "forecast_data = fm.get_processed_data(latitude, longitude, start, end)"
    ]
   },
   {
