Comparission with NAM

--- a/ModelChain GFS.ipynb
+++ b/ModelChain GFS.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MODELCHAIN"
+    "# Comparison CUTonalá and PVlib forecast using GFS"
    ]
   },
   {
@@ -649,7 +649,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
