Comparission pvlib & Cut using NAM from January 4 to 17

--- a/ModelChain GFS.ipynb
+++ b/ModelChain GFS.ipynb
@@ -50,81 +50,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Technology           Multi-c-Si\n",
-       "Bifacial                      0\n",
-       "STC                     319.792\n",
-       "PTC                       292.8\n",
-       "A_c                       1.901\n",
-       "Length                    1.948\n",
-       "Width                     0.976\n",
-       "N_s                          72\n",
-       "I_sc_ref                   9.26\n",
-       "V_oc_ref                   45.3\n",
-       "I_mp_ref                   8.69\n",
-       "V_mp_ref                   36.8\n",
-       "alpha_sc               0.004389\n",
-       "beta_oc               -0.139116\n",
-       "T_NOCT                     45.8\n",
-       "a_ref                   1.78528\n",
-       "I_L_ref                  9.2705\n",
-       "I_o_ref             8.72084e-11\n",
-       "R_s                    0.362235\n",
-       "R_sh_ref                319.379\n",
-       "Adjust                  5.85738\n",
-       "gamma_r                 -0.4002\n",
-       "BIPV                          N\n",
-       "Version       SAM 2018.11.11 r2\n",
-       "Date                   1/3/2019\n",
-       "Name: Canadian_Solar_Inc__CS6X_320P, dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cec_module"
+    "#cec_module"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Vac                          480\n",
-       "Pso                       75.262\n",
-       "Paco                       39950\n",
-       "Pdco                     41044.5\n",
-       "Vdco                         700\n",
-       "C0                  -4.21213e-07\n",
-       "C1                      -3.3e-05\n",
-       "C2                      0.000303\n",
-       "C3                     -0.001313\n",
-       "Pnt                       11.985\n",
-       "Vdcmax                       820\n",
-       "Idcmax                   58.6349\n",
-       "Mppt_low                     520\n",
-       "Mppt_high                    820\n",
-       "CEC_Date               5/15/2018\n",
-       "CEC_Type     Utility Interactive\n",
-       "Name: INGETEAM_POWER_TECHNOLOGY_S_A___Ingecon_Sun_40TL_U_M__480V_, dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cec_inverter"
+    "#cec_inverter"
    ]
   },
   {
@@ -161,9 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'surface_tilt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-9fa75d2fae2e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m system = PVSystem(surface_tilt=surface_tilt, surface_azimuth=surface_azimuth,\n\u001b[0m\u001b[1;32m      2\u001b[0m                  \u001b[0mmodule_parameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcec_module\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                  \u001b[0minverter_parameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcec_inverter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                  \u001b[0mtemperature_model_parameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtemperature_model_parameters\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                  \u001b[0malbedo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0malbedo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msurface_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'surface_tilt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "system = PVSystem(surface_tilt=surface_tilt, surface_azimuth=surface_azimuth,\n",
     "                 module_parameters=cec_module,\n",
@@ -224,9 +173,9 @@
     "start = pd.Timestamp(datetime.date.today(), tz='America/Mexico_City') # today's date\n",
     "end = start + pd.Timedelta(days=7) # 7 days from today\n",
     "\n",
-    "#Start variable stand for a configurable variable for one given date\n",
-    "#End variable stand for a configurable variable for one given end date\n",
-    "#Days before today variable stands for an especific date before today\n",
+    "#start_variable stand for a configurable variable for one given date\n",
+    "#end_variable stand for a configurable variable for one given end date\n",
+    "#days_before_today variable stands for an especific date before today\n",
     "\n",
     "days_before_today = 4\n",
     "\n",
