Comparission between pvlib RAP and CUTonalá real data from January 4 to January 17 2021

--- a/ModelChain NAM.ipynb
+++ b/ModelChain NAM.ipynb
@@ -257,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3447,7 +3449,7 @@
    "source": [
     "comparision.plot()\n",
     "plt.ylabel('Power (W)')\n",
-    "plt.title('Comparision Between Pvlib NAM and PV Cutonala, %s %s' %(month, study_day));"
+    "plt.title('Comparision Between Pvlib %s and PV Cutonala, %s %s' %(model_of_study, month, study_day));"
    ]
   },
   {
