--- a/ModelChain GFS.ipynb
+++ b/ModelChain GFS.ipynb
@@ -98,21 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'surface_tilt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-9fa75d2fae2e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m system = PVSystem(surface_tilt=surface_tilt, surface_azimuth=surface_azimuth,\n\u001b[0m\u001b[1;32m      2\u001b[0m                  \u001b[0mmodule_parameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcec_module\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                  \u001b[0minverter_parameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcec_inverter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                  \u001b[0mtemperature_model_parameters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtemperature_model_parameters\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                  \u001b[0malbedo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0malbedo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msurface_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodule\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'surface_tilt' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "system = PVSystem(surface_tilt=surface_tilt, surface_azimuth=surface_azimuth,\n",
     "                 module_parameters=cec_module,\n",
@@ -129,11 +117,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PVSystem:\n",
+       "  name: Name of PV system: Huerto de Cutonalá\n",
+       "  surface_tilt: 25\n",
+       "  surface_azimuth: 180\n",
+       "  module: None\n",
+       "  inverter: None\n",
+       "  albedo: 0.2\n",
+       "  racking_model: open_rack\n",
+       "  module_type: glass_polymer\n",
+       "  temperature_model_parameters: {'a': -3.47, 'b': -0.0594, 'deltaT': 3}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#system"
+    "system"
    ]
   },
   {
@@ -156,9 +164,32 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ModelChain: \n",
+       "  name: Huerto de Cutonalá\n",
+       "  orientation_strategy: None\n",
+       "  clearsky_model: ineichen\n",
+       "  transposition_model: haydavies\n",
+       "  solar_position_method: nrel_numpy\n",
+       "  airmass_model: kastenyoung1989\n",
+       "  dc_model: cec\n",
+       "  ac_model: snlinverter\n",
+       "  aoi_model: no_aoi_loss\n",
+       "  spectral_model: no_spectral_loss\n",
+       "  temperature_model: sapm_temp\n",
+       "  losses_model: no_extra_losses"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#mc"
+    "mc"
    ]
   },
   {
@@ -258,7 +289,7 @@
     }
    ],
    "source": [
-    "from pvlib import solarposition, irradiance, atmosphere, pvsystem, inverter, temperature, iam\n",
+    "\n",
     "from pvlib.forecast import GFS, NAM, NDFD, RAP, HRRR"
    ]
   },
