--- a/Clean data, first days of January.ipynb
+++ b/Clean data, first days of January.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9b2459bc",
+   "id": "a7be6117",
    "metadata": {},
    "source": [
     "### Clean data for NAM y RAP model for the first days"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "57f0b899",
+   "id": "1cd87a55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3dca87e5",
+   "execution_count": 13,
+   "id": "bec16c21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b6516787",
+   "execution_count": 14,
+   "id": "3b54dcab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d1a1709a",
+   "execution_count": 15,
+   "id": "2c78a2e5",
    "metadata": {
     "scrolled": true
    },
@@ -149,7 +149,7 @@
        "10     733.11      1146.196858"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,13 +159,13 @@
     "# we clean the data to be consistent with GFS model\n",
     "\n",
     "df = pd.read_csv(jan_04_NAM_file)\n",
-    "df\n"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "7a857320",
+   "execution_count": 16,
+   "id": "867cb14a",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "10     733.11      1146.196858"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "afd0e79c",
+   "id": "57ecf888",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5af1bee",
+   "id": "49058a76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ae43291",
+   "id": "71ba21d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98de782b",
+   "id": "c9265ba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea505393",
+   "id": "459a378c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43dc4d51",
+   "id": "ccd7e69c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,15 +311,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb38ae41",
+   "id": "aa86dbb7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "metrics_df.to_csv(metrics_data, index=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "89be0f84",
+   "id": "bba832f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "561271c4",
+   "id": "750e1709",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d63585a0",
+   "id": "07b9ed5b",
    "metadata": {},
    "outputs": [],
    "source": [
